--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
 
     
 
@@ -184,7 +184,7 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">Если возникают вопросы - &nbsp;<a href="mailto:i.ageev@ecco-ros.ru" class="text-success"><strong>ПИШИТЕ</strong></a></p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">Если возникают вопросы - &nbsp;<a href="mailto:i.ageev@ecco-ros.ru"><strong>Вам сюда</strong></a></p>
             </div>
         </div>
     </div>
