--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
 
     
 
@@ -95,7 +95,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://eccoros.lms.mirapolis.ru/mira/#&step=126&s=uzj7u2jRxQue0jFMwpHb&stype=nps&name=%D0%9C%D0%B5%D0%B4%D0%B8%D0%B0%D1%82%D0%B5%D0%BA%D0%B0&doaction=Go&id=0&type=mediateka1 "target="_parent" class="btn btn-primary display-4">Подробнее</a></div>
-                        <a href="https://eccoros.lms.mirapolis.ru/mira/#&step=126&s=uzj7u2jRxQue0jFMwpHb&stype=nps&name=%D0%9C%D0%B5%D0%B4%D0%B8%D0%B0%D1%82%D0%B5%D0%BA%D0%B0&doaction=Go&id=0&type=mediateka1 "target="_parent"><img src="assets/images/irlandiya-dublin-staraya-biblioteka-triniti-kolledzh-492x246.jpeg" alt="Mobirise" title=""></a>
+                        <a href="https://eccoros.lms.mirapolis.ru/mira/#&step=126&s=uzj7u2jRxQue0jFMwpHb&stype=nps&name=%D0%9C%D0%B5%D0%B4%D0%B8%D0%B0%D1%82%D0%B5%D0%BA%D0%B0&doaction=Go&id=0&type=mediateka1 "><img src="assets/images/irlandiya-dublin-staraya-biblioteka-triniti-kolledzh-1-492x246.jpeg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">Медиатека</h4>
