--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
+<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
 
     
 
@@ -129,7 +129,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
-                            Группа Вконтакте</h4>
+                            Группа ВКонтакте</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Закрытая группа ВКонтакте для сотрудников.</p>
                     </div>
