--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
 
     
 
@@ -146,7 +146,7 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
                             Интранет</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Контакты сотрудников, адреса магазинов, внутренние документы</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Контакты сотрудников, адреса магазинов и документы.<br></p>
                     </div>
                 </div>
             </div>
