create github pages

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
 
     
 
@@ -109,7 +109,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://eccoros.lms.mirapolis.ru/mira/#&step=7&type=myquery&id=0&doaction=Go "target="_parent" class="btn btn-primary display-4">Подробнее</a></div>
-                        <a href="https://eccoros.lms.mirapolis.ru/mira/#&step=7&type=myquery&id=0&doaction=Go "><img src="assets/images/untitled-10-12-492x350.jpeg" alt="Mobirise" title=""></a>
+                        <a href="https://eccoros.lms.mirapolis.ru/mira/#&step=7&type=myquery&id=0&doaction=Go https://eccoros.lms.mirapolis.ru/mira/#&step=126&s=uzj7u2jRxQue0jFMwpHb&stype=nps&name=%D0%9C%D0%B5%D0%B4%D0%B8%D0%B0%D1%82%D0%B5%D0%BA%D0%B0&doaction=Go&id=0&type=mediateka1"target="_parent"><img src="assets/images/untitled-10-12-492x350.jpeg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -125,7 +125,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://vk.com/eccoros" class="btn btn-primary display-4" target="_blank">Подробнее</a></div>
-                        <a href="https://vk.com/eccoros"><img src="assets/images/kaz-7260.jpg-1-492x277.jpeg" alt="Mobirise" title=""></a>
+                        <a href="https://vk.com/eccoros" target="_blank"><img src="assets/images/kaz-7260.jpg-1-492x277.jpeg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -141,7 +141,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="http://intranet.ecco-ros.ru/" class="btn btn-primary display-4" target="_blank">Подробнее</a></div>
-                        <a href="http://intranet.ecco-ros.ru/"><img src="assets/images/thank-1-492x329.jpeg" alt="Mobirise" title=""></a>
+                        <a href="http://intranet.ecco-ros.ru/" target="_blank"><img src="assets/images/thank-1-492x329.jpeg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
