--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);">
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(63, 81, 181);">
     </div>
 
     <div class="container  ">
@@ -80,7 +80,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="features18 popup-btn-cards cid-rESOloBYd0" id="features18-3">
 
     
 
