create github pages

--- a/page1.html
+++ b/page1.html
@@ -26,7 +26,7 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(35, 35, 35);">
+    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(63, 81, 181);">
     </div>
 
     <div class="container">
@@ -43,7 +43,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
